<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.wjthub.android.login.viewmodel.HomeViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.wjthub.android.components.ui.login.login.LoginRegisterHomeFragment">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:fontFamily="@font/indigo_daisy"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/tv_subtitle"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tag"
            android:textSize="17sp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:layout_above="@id/login_input_email"/>

        <EditText
            android:id="@+id/login_input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@={viewModel.email}"
            android:hint="@string/prompt_email"
            android:autofillHints="@string/prompt_email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:layout_above="@id/login_input_password"
            android:background="@drawable/bg_register_input"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/login_input_password"
            android:text="@={viewModel.password}"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_password"
            android:autofillHints="@string/prompt_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_register_input"
            android:textSize="15sp"
            />


        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_input_password"
            android:background="@drawable/btn_register"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:onClick="@{(view)->viewModel.login(view)}"
            android:textColor="@android:color/white"
            android:text="@string/login_btn_login"/>

        <TextView
            android:id="@+id/login_label_orPromote"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_above="@+id/login_btn_toRegister"
            android:layout_below="@+id/login_btn_login"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="186dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="185dp"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/login_label_or"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_btn_toRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_img_rightArrow"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/btn_to_register"
            android:text="@string/to_register_page"
            android:onClick="@{(view)->viewModel.toRegister(view)}"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/login_img_rightArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_right"
            android:layout_above="@id/swipeRight"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/swipeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_left_for_register"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        tools:context=".ui.login.login.LoginRegisterHomeFragment">-->

<!--        <EditText-->
<!--            android:id="@+id/username"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="96dp"-->
<!--            android:layout_marginEnd="24dp"-->
<!--            android:autofillHints="@string/prompt_email"-->
<!--            android:hint="@string/prompt_email"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:selectAllOnFocus="true"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <EditText-->
<!--            android:id="@+id/password"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="24dp"-->
<!--            android:autofillHints="@string/prompt_password"-->
<!--            android:hint="@string/prompt_password"-->
<!--            android:imeActionLabel="@string/action_sign_in_short"-->
<!--            android:imeOptions="actionDone"-->
<!--            android:inputType="textPassword"-->
<!--            android:selectAllOnFocus="true"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/username" />-->

<!--        <Button-->
<!--            android:id="@+id/button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="54dp"-->
<!--            android:layout_marginBottom="320dp"-->
<!--            android:text="@string/to_register_page"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/login" />-->

<!--        <Button-->
<!--            android:id="@+id/login"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="start"-->
<!--            android:layout_marginStart="48dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="48dp"-->
<!--            android:layout_marginBottom="64dp"-->
<!--            android:enabled="false"-->
<!--            android:text="@string/action_sign_in"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/button"-->
<!--            app:layout_constraintHorizontal_bias="0.6"-->
<!--            app:layout_constraintStart_toStartOf="@+id/button"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/password"-->
<!--            app:layout_constraintVertical_bias="0.102" />-->

<!--        <ProgressBar-->
<!--            android:id="@+id/loading"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="64dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:layout_marginBottom="64dp"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/password"-->
<!--            app:layout_constraintStart_toStartOf="@+id/password"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.3" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
</layout>